# input2cmds

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
